--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,12 +11,14 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
     crossorigin="anonymous" />
   
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Photographer Website</title>
 </head>
 
 <body class="bg-dark text-light">
+  <div class="wrapper">
 
     <header>
       <nav class="navbar navbar-expand-lg bg-light">
@@ -24,9 +26,20 @@
           <a class="navbar-brand" href="#">
             <i class="fa-solid fa-camera-retro"></i>
           </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+
+          <button class="menu-btn navbar-toggler d-lg-none"
+                   type="button" 
+                   data-bs-toggle="collapse" 
+                   data-bs-target="#navbarSupportedContent" 
+                   aria-controls="navbarSupportedContent" 
+                   aria-expanded="false" 
+                   aria-label="Toggle navigation">
+
+              <div class="menu-btn__burger toggler-icon navbar-toggler-icon"> </div>
+              <!-- <span class="navbar-toggler-icon"></span> -->
+          
           </button>
+
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
@@ -99,5 +112,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+  </div>
+
 </body>
 </html>
